# signalflow

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  PYTHON-STYLE-GUIDE.md  README.md  explicit.out  gemini.resume  package.json  pyproject.toml  requirements.txt  stress.out
docs/: function-chip.adoc  module-chip.adoc  overview.adoc  trace-synthesis.adoc  wire-model.md  wiring.adoc
examples/: branch-converging.yaml  branch-linear.yaml  explicit-hub.yaml  leaf.yaml  passthrough.yaml  pipeline.yaml  root-multi-child-child.yaml  root-multi-child.yaml  root-single-child-no-return.yaml  root-single-child-signalsMixed.yaml  root-single-child-signalsOnMain.yaml  root-single-child-signalsOnRun.yaml  show-cohort.yaml  stress-hub.yaml
src/signalflow/: __init__.py  __main__.py  config.py
src/signalflow/engine/: __init__.py  render.py
src/signalflow/lib/: __init__.py  boxes.py  canvas_factory.py  chips.py  layout.py  tree.py  wires.py
src/signalflow/models/: __init__.py  canvas.py  module_box.py  node.py
tests/: test_canvas.py  test_chips.py  test_layout.py  test_render.py  test_wire_model.py  test_wires.py
